--- a/www/ui/milestone5x_screens/2-5-0.html
+++ b/www/ui/milestone5x_screens/2-5-0.html
@@ -150,29 +150,24 @@
 			</tr>
 			</table>
 		</div>
-		
-		
-		<p><div id="functnbar">
+				
+		<p class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<th>Save</th>
+			<td><strong>save:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>Select list item(s) to:</th>
+			<td><strong>select list item(s) to:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>General functions</th>
+			<td><strong>general functions:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-
 			</tr>
-
 			<tr>
 			<td><input type="submit" value="all" class="bttn" />&nbsp;<input type="submit" value="selected" class="bttn" /></td>			
-
-<td><input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" />&nbsp;<input type="submit" value="subscribe" class="bttn" />&nbsp;<input type="submit" value="unsubscribe" class="bttn" /></td>
+			<td><input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" />&nbsp;<input type="submit" value="subscribe" class="bttn" />&nbsp;<input type="submit" value="unsubscribe" class="bttn" /></td>
 			<td><input type="submit" value="Define new email" class="bttn" />&nbsp;</td>
-
 			</tr>
 			</table>
-		</div></p>
+		</p>
 		
 		<h3>Project X alert emails</h3>
 		
@@ -249,27 +244,23 @@
 		</tr>
 		</table>
 		
-		<p><div id="functnbar">
+		<p class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
-			<th>Save</th>
+			<td><strong>save:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>Select list item(s) to:</th>
+			<td><strong>select list item(s) to:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-			<th>General functions</th>
+			<td><strong>general functions:</strong></td>
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-
 			</tr>
-
 			<tr>
 			<td><input type="submit" value="all" class="bttn" />&nbsp;<input type="submit" value="selected" class="bttn" /></td>			
-
-<td><input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" />&nbsp;<input type="submit" value="subscribe" class="bttn" />&nbsp;<input type="submit" value="unsubscribe" class="bttn" /></td>
+			<td><input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" />&nbsp;<input type="submit" value="subscribe" class="bttn" />&nbsp;<input type="submit" value="unsubscribe" class="bttn" /></td>
 			<td><input type="submit" value="Define new email" class="bttn" />&nbsp;</td>
-
 			</tr>
 			</table>
-		</div></p>
+		</p>
 	</div>
 	<!-- Scarab - App -->
 
