--- a/www/ui/milestone2x_screens/2-6-0.html
+++ b/www/ui/milestone2x_screens/2-6-0.html
@@ -145,7 +145,7 @@
 		
 		<p>&#171; previous | 1 of 1 | next &#187; (<a href="#">add/remove attributes from view</a>)</p>
 		
-		<div class="functnbar">
+		<p class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
 			<td><strong>save:</strong></td>
@@ -163,7 +163,7 @@
 			<td><input type="submit" value="go" class="bttn" /></td>
 			</tr>
 			</table>
-		</div>
+		</p>
 		
 		<h3>Search results</h3>
 		
@@ -209,7 +209,7 @@
 		</tr>
 		</table>
 				   
-		<div class="functnbar">
+		<p class="functnbar">
 			<table cellpadding="0" cellspacing="0" border="0">
 			<tr>
 			<td><strong>save:</strong></td>
@@ -227,7 +227,7 @@
 			<td><input type="submit" value="go" class="bttn" /></td>
 			</tr>
 			</table>
-		</div>
+		</p>
 		
 		<p>issues per page:&#160; <input type="radio" name="foo" checked="checked" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" class="bttn" /></p>
 		
