--- a/www/ui/milestone10x_screens/2-1-4-0.html
+++ b/www/ui/milestone10x_screens/2-1-4-0.html
@@ -170,6 +170,7 @@
 			</table>
 		</div>
 		
+		
 		<h3>"Issue history" and "Comments" display options</h3>
 		
 		<p><input type="checkbox" checked="checked" />&nbsp;Show&nbsp;
@@ -191,6 +192,13 @@
 		</select>
 		most recent comments (otherwise, a link will appear to a seperate page).
 		</p>
+				
+	<p>
+	<table cellpadding="3" cellspacing="0" width="100%" border="2">
+	<tr bgcolor="#ff0000" nowrap="nowrap">
+	<td>1. screen one information (entered before duplicate check)</td>
+	</tr>
+	</table></p>	
 		
 		<h3>Attribute group one</h3>
 		
@@ -280,14 +288,42 @@
 		
 		<p><input type="submit" value="add attribute" class="button" />&#160;<input type="submit" value="delete selected" class="button" />&#160;<input type="submit" value="resort attributes in this group" class="button" /></p>
 
+
+
+		<div class="functnbar">
+			<table cellpadding="0" cellspacing="0" border="0">
+			<tr>
+			<td><strong>"enter issue" options:</strong></td>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+			<td><strong>attribute groups options:</strong></td>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+			</tr>
+			<tr>
+			<td><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="preview" class="button" /></td>
+			<td><input type="submit" value="add" class="button" />&#160;<input type="submit" value="delete" class="button" />&#160;<input type="submit" value="resort" class="button" /></td>
+
+			</tr>
+			</table>
+		</div>
+		
+
+
 <br>
 	<table cellpadding="3" cellspacing="0" width="100%" border="2">
 	<tr bgcolor="#ff0000" nowrap="nowrap">
-	<td>2. Check above information against existing data (duplicate check)</td>
+	<td>2. Duplicate check: "screen 1" information checked against existing issues</td>
 	<td><input type="submit" value="up" />&nbsp;<input type="submit" value="down" /></td>
 	</tr>
 	</table>
-<br>
+
+
+	<p>
+	<table cellpadding="3" cellspacing="0" width="100%" border="2">
+	<tr bgcolor="#ff0000" nowrap="nowrap">
+	<td>3. screen two information (entered after duplicate check)</td>
+	</tr>
+	</table></p>	
+
 		
 		<h3>Attribute group two</h3>
 		
