--- a/www/ui/milestone5x_screens/2-5-0.html
+++ b/www/ui/milestone5x_screens/2-5-0.html
@@ -61,16 +61,17 @@
 			</tr>
 			<tr>
 			<td>
-			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
-			<div>&nbsp;&nbsp;Issue tracking</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
-			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
-			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
-			<div>&nbsp;&nbsp;<a href="#">News</a></div>
-			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;- <strong>Issue tracking</strong></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="enter issue, verbose and advanced">Enter issue</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="queries, saved and custom">Queries</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="reports operations">Reports</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="vote management panel">Vote mgmt.</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Alert email</div>
+			<div>&nbsp;&nbsp;+ <a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;+ <a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;+ <a href="#">News</a></div>
+			<div>&nbsp;&nbsp;+ <a href="#">Source code</a></div>
 			</td>
 			</tr>
 			<tr>
@@ -145,8 +146,8 @@
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<td><a href="#">Workflow customization options</a></td>
-			<th>Custom Alert email list</th>
+			<td><a href="#" title="workflow customization options">Workflow customization options</a></td>
+			<th>Custom alert email list</th>
 			</tr>
 			</table>
 		</div>
