updates to the "enter issue" template pages: 2-1-0-1 = save/edit 2-1-0-2 = list

--- a/www/ui/milestone10x_screens/2-1-0-1.html
+++ b/www/ui/milestone10x_screens/2-1-0-1.html
@@ -137,7 +137,7 @@
 		</tr>
 		</table>
 	</div>
-	<!-- Scarab - App -->
+
 	
 	<!-- Scarab - App -->
 	<div class="app" id="div2-1-0-1">
@@ -169,47 +169,140 @@
 			</table>
 		</div>
 		
-		<h3>Completed attributes in template</h3>
+
+		<h3>Completed Attributes in "Enter Issue" template</h3>
+		<br>
+		<div id="tabs">
+			<table cellpadding="3" cellspacing="0" border="0">
+			<tr>
+			<th><small>1:</small> Summary info</th>
+			<td><small>2:</small> Duplicate check</td>
+			<td><small>3:</small> <a href="#" title="view verbose information">Verbose info</a></td>
+			</tr>
+			</table>
+		</div>
+								
+		<h3>Input your issue</h3>
 		
-		<table width="100%" border="1" cellspacing="2" cellpadding="3">
-		<tr>
-		<th>attribute A:</th>
-		<th>attribute b:</th>
-		<th>attribute c:</th>
-		<th>attribute d:</th>
-		</tr>
+		<div class="axial">
+			<table width="100%" cellspacing="2" cellpadding="3" border="1">
+			<tr>
+			<th width="120">issue summary:</th>
+			<td><input type="text" value="" size="" /></td>
+			</tr>
 		
-		<tr class="a">
-		<td><select>
-		<option>attribute a value</option>
-		</select>
-		</td>
-		<td><input type="text" value="attribute b value" /></td>
-		<td><input type="text" value="attribute c value" /></td>
-		<td><input type="text" value="attribute d value" /></td>
-		</tr>
-		</table>
-		
-		<h3>Save to location</h3>
-		
-		<p><input type="radio" name="saveto" />&#160;
-		<select>
-		<option>select project</option>
-		<option>-------------</option>
-		<option>project X</option>
-		<option>--project X.1</option>
-		<option>--project X.2</option>
-		<option>-------------</option>
-		<option>project y</option>
-		<option>--project Y.1</option>
-		<option>-------------</option>
-		<option>project Z</option>
-		</select>
-		</p>
-		
-		<p><input type="radio" name="saveto" />&#160;personal account</p>
-		
-		<p><a href="#">use this template</a></p>
+			<tr>
+			<th width="120">version:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+	
+			<tr>
+			<th width="120">platform:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+	
+			<tr>
+			<th width="120">os:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+	
+			<tr>
+			<th width="120">found during:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+	
+			<tr>
+			<th width="120">issue type:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+	
+			<tr>
+			<th width="120">functional area:</th>
+			<td><input type="checkbox" /> UI <input type="checkbox" />setup <input type="checkbox" />help</td>
+			</tr>
+	
+			<tr>
+			<th width="120">severity:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+	
+			<tr>
+			<th width="120">priority:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+			</table>
+		</div>
+	</div>
 
 		<p class="functnbar"><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="clear form" class="button" /></p>
 	</div>
