--- a/www/ui/milestone10x_screens/2-1-0-2.html
+++ b/www/ui/milestone10x_screens/2-1-0-2.html
@@ -143,26 +143,25 @@
 	<div class="app" id="div2-1-0-2">
 		<h2>Template list (2.1.0.2)</h2>
 
-		<p class="functnbar"><input type="submit" value="delete selected templates" />&#160;<input type="submit" value="cancel" /></p>
-		
+		<p class="functnbar"><input type="submit" value="create new" />&#160;<input type="submit" value="delete selected" />&#160;<input type="submit" value="cancel" /></p>		
 		<h3>Templates</h3>
 		
-		<p><a href="#">&#171;</a> <a href="#">previous</a> | 1 of 1 | <a href="#">next</a> <a href="#">&#187;</a></p>
+		<p>&#171; previous | 1 of 1 | next &#187;</p>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
 		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" border="0" /></a><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" border="0" /></th>
-		<th><a href="#" title="sort">template name:</a></th>
-		<th><a href="#" title="sort">template descr:</a></th>
-		<th><a href="#" title="sort">project(s):</a></th>
-		<th><a href="#" title="sort">author:</a></th>
+		<th><a href="#" title="sort">template name</a></th>
+		<th><a href="#" title="sort">template descr</a></th>
+		<th><a href="#" title="sort">project</a></th>
+		<th><a href="#" title="sort">author</a></th>
 		</tr>
 		
 		<tr class="a">
 		<td><input type="checkbox" /></td>
 		<td><a href="#">name X</a></td>
 		<td>descr X</td>
-		<td>project X, project X.1, project X.2</td>
+		<td>project X</td>
 		<td><a href="#">joes@users.com</a></td>
 		</tr>
 		
@@ -170,14 +169,14 @@
 		<td><input type="checkbox" /></td>
 		<td><a href="#">name X</a></td>
 		<td>descr X</td>
-		<td>project y, project y.1, project y.2</td>
+		<td>project X</td>
 		<td><a href="#">joes@users.com</a></td>
 		</tr>
 		</table>
 		
-		<p><a href="#">&#171;</a> <a href="#">previous</a> | 1 of 1 | <a href="#">next</a> <a href="#">&#187;</a></p>
+		<p>&#171; previous | 1 of 1 | next &#187;</p>
 
-		<p class="functnbar"><input type="submit" value="delete selected templates" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="create new" />&#160;<input type="submit" value="delete selected" />&#160;<input type="submit" value="cancel" /></p>
 	</div>
 	<!-- Scarab - App -->
 
