--- a/src/main/org/jboss/system/package.html
+++ b/src/main/org/jboss/system/package.html
@@ -16,11 +16,11 @@
     Lesser General Public License for more details.                           
 
     -->
-    <!-- $Id: package.html,v 1.1 2001/09/01 04:57:56 user57 Exp $ -->
+    <!-- $Id: package.html,v 1.2 2001/09/08 00:53:57 user57 Exp $ -->
   </head>
 
   <body bgcolor="white">
-    <p><em>Package description goes here</em>.
+    <p>The core JBoss system loading services and support classes.
 
     <h2>Package Specification</h2>
     <ul>
