minor changes to reflect reality and not lead people the wrong way

--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<!-- $Id: index.html,v 1.14 2001/05/21 03:43:19 jon Exp $ -->
+<!-- $Id: index.html,v 1.15 2001/09/09 21:28:59 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -27,12 +27,14 @@
                     tracking, collaborative prioritization (voting).</li>
                 <li>Built using Java Servlet technology for speed, scalability, 
                     maintainability, and ease of installation.</li> 
-                <li>Compatible with Bugzilla and other widely used bug tracking 
-                    system via a database level migration tool.</li>
+                <li>Import/Export ability via XML allowing for easy migration
+                    from other systems (like Bugzilla).</li>
                 <li>Modular code design that allows manageable modifications of 
                     existing and new features over time.</li>
                 <li>Fully customizable through a set of administrative pages.</li>
-                <li>Can be integrated easily into larger systems.</li>
+                <li>Easily modified UI look and feel.</li>
+                <li>Can be <a href="/integration.html">integrated</a>
+                    easily into larger systems.</li>
             </ul>
 
             <p>
@@ -41,7 +43,8 @@
             underlying library of collaboration components. For example,
             Scarab will not implement its own notification system or
             localization system, that should be a reusable component of
-            the underlying framework.
+            the underlying <a
+            href="http://jakarta.apache.org/turbine/">framework</a>.
             </p>
             
             <p>
