--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.11 2001/08/24 20:48:32 jon Exp $ -->
+<!-- $Id: project_docs.html,v 1.12 2001/09/12 20:47:38 jon Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -20,7 +20,8 @@
             <h3>Project documents:</h3>
             <ul>
                 <li><a href="project_status.html">Project Status</a></li>
-                <li><a href="scarab-design.html">Design document</a></li>
+                <li><a href="scarab-design.html">Design Documentation</a></li>
+                <li><a href="attributes.html">Attribute Documentation</a></li>
 <!--                <li><a href="usemodels/index.html">Use Models: user classes, use cases, screen descriptions</a></li> -->
                 <li><a href="http://scarab.whichever.com/">Nightly Runbox</a> (may be down)</li>
                 <li><a href="scarabfeaturematrix.html">Feature Matrix</a></li>
