updated query functionality - added subscription features / undoing the need for seperate alert email functionality...
also updated the UI screen index - removed refs to alert email screens and queue screen stuff (which is SourceCast personalization functionality - and likely just a slight extension of saved query functionality as well)...

Braino

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,7 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.26 2001/09/05 00:07:29 braino Exp $ <a href=""></a></em>
+<em>$Id: index.html,v 1.27 2001/09/12 23:24:15 braino Exp $ <a href=""></a></em>
 
 
 <ul>
@@ -119,25 +119,31 @@
 		
 		<tr class="a">
 		<td><a href="./milestone2x_screens/2-2-0-x.html">2.2.0.x</a></td>	
-		<td>Custom Search</td>	
+		<td>Custom search</td>	
 		<td>? - suggest 'CusSea.vm'</td>
 		</tr>
 		
 		<tr class="b">
 		<td><a href="./milestone2x_screens/2-2-0.html">2.2.0</a></td>	
-		<td>Advanced Query</td>	
+		<td>Advanced query</td>	
 		<td>Query.vm</td>
 		</tr>
 		
 		<tr class="a">
 		<td><a href="./milestone2x_screens/2-2-1.html">2.2.1</a></td>	
-		<td>Save Query</td>	
+		<td>Save query</td>	
+		<td>? - suggest 'SavQue.vm'</td>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone2x_screens/2-2-2.html">2.2.2</a></td>	
+		<td>Saved query list</td>	
 		<td>? - suggest 'SavQue.vm'</td>
 		</tr>
 		
 		<tr class="b">
 		<td><a href="./milestone2x_screens/2-6-0.html">2.6.0</a></td>	
-		<td>Queue List / Search Results</td>	
+		<td>Queue list / search results</td>	
 		<td>? - suggest 'QueLisSeaRes.vm'</td>
 		</tr>
 		</table>
@@ -208,18 +214,6 @@
 		<th width="100">comp</th>	
 		<th>title</th>	
 		<th>template pathname (/scarab/src/templates/screens)</th>
-		</tr>
-		
-		<tr class="a">
-		<td><a href="./milestone5x_screens/2-5-0.html">2.5.0</a></td>	
-		<td>Custom alert email list</td>	
-		<td>?</td>
-		</tr>
-				
-		<tr class="b">
-		<td><a href="./milestone5x_screens/2-5-1.html">2.5.1</a></td>	
-		<td>Define custom alert email</td>	
-		<td>?</td>
 		</tr>
 		</table>
 	</dd>
@@ -320,24 +314,6 @@
 		<tr class="a">
 		<td><a href="./milestone8x_screens/3-6-0.html">3.6.0</a></td>	
 		<td>Approve / reject user submitted X</td>	
-		<td>?</td>
-		</tr>
-		
-		<tr class="b">
-		<td><a href="./milestone8x_screens/2-0-0-1-1.html">2.0.0.1.1</a></td>	
-		<td>Add / remove / sort queues</td>	
-		<td>?</td>
-		</tr>
-		
-		<tr class="a">
-		<td><a href="./milestone8x_screens/2-0-0-1-2.html">2.0.0.1.2</a></td>	
-		<td>Predefined queue list</td>	
-		<td>?</td>
-		</tr>
-		
-		<tr class="b">
-		<td><a href="./milestone8x_screens/2-0-0-1-3.html">2.0.0.1.3</a></td>	
-		<td>Queue</td>	
 		<td>?</td>
 		</tr>
 		</table>
