--- a/www/ui/milestone2x_screens/2-2-2.html
+++ b/www/ui/milestone2x_screens/2-2-2.html
@@ -142,85 +142,143 @@
 	<!-- Scarab - App -->
 	<div id="div2-2-2" class="app">
 		<h2>Saved query list (2.2.2)</h2>
+
+		<div id="tabs">
+			<table cellpadding="3" cellspacing="0" border="0">
+			<tr>
+			<td><a href="#" title="view advanced query information">Avanced query</a></td>
+			<td><a href="#" title="view custom query information">Custom</a></td>
+			<th>Saved queries</th>
+			</tr>
+			</table>
+		</div>
 		
 		<p>Click on location to execute</p>
 		
-		<p class="functnbar"><input type="submit" value="delete selected" />&#160;<input type="submit" value="cancel" /></p>
+		<div class="functnbar">
+			<table cellpadding="0" cellspacing="0" border="0">
+			<tr>
+			<th>General functions</th>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+
+			<th>Select list item(s) to:</th>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+
+			</tr>
+
+			<tr>
+			<td><input type="submit" value="save" class="bttn" />&nbsp;<input type="submit" value="cancel" class="bttn" />&nbsp;<input type="submit" value="new" class="bttn" /></td>			
+
+			<td><input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" />&nbsp;<input type="submit" value="subscribe" class="bttn" />&nbsp;<input type="submit" value="unsubscribe" class="bttn" /></td>
+
+			</tr>
+			</table>
+		</div>
 		
-		<h3>Templates</h3>
+		<h3>Saved queries</h3>
 		
 		<p>&#171; previous | 1 of 1 | next &#187; </p>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
 		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" border="0" /></a><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" border="0" /></th>
-		<th><a href="#" title="sort">Query name:</a></th>
-		<th><a href="#" title="sort">Query descr:</a></th>
-		<th><a href="#" title="sort">Availability:</a></th>
-		<th><a href="#" title="sort">Location:</a> (click to execute)</th>
-		<th><a href="#" title="sort">author:</a></th>
-		
+		<th><a href="#" title="sort">subscr</a></th>
+		<th><a href="#" title="sort">subsr frequency</a></th>
+		<th><a href="#" title="sort">Query name</a></th>
+		<th><a href="#" title="sort">Query description</a></th>
+		<th><a href="#" title="sort">Location</a></th>
+		<th><a href="#" title="sort">initiated by</a></th>
 		</tr>
 		
 		<tr class="a">
 		<td><input type="checkbox" /></td>
-		<td><a href="#">name X</a></td>
-		<td>descr X</td>
-		<td>Personal profile</td>
-		<td><a href="#">project X</a></td>
-		<td><a href="#">joes@users.com</a></td>
+		<td>y</td>
+		<td><select>
+			<option>1 daily</option>
+			<option>2 daily</option>			
+			<option>1hr</option>
+			<option>.5hr</option>
+			</select>
+		</td>
+		<td><a href="#">Daily bug report</a></td>
+		<td>Description x</td>
+		<td><a href="#">Personal profile</a></td>
+		<td><a href="mailto:">x@xxx.com</a></td>
 		</tr>
 		
 		<tr class="b">
 		<td><input type="checkbox" /></td>
-		<td><a href="#">name X</a></td>
-		<td>descr X</td>
-		<td>Personal profile</td>
-		<td><a href="#">project X</a></td>
-		<td><a href="#">joes@users.com</a></td>
+		<td>y</td>
+		<td><select>
+			<option>1 daily</option>
+			<option>2 daily</option>			
+			<option>1hr</option>
+			<option>.5hr</option>
+			</select>
+		</td>
+		<td><a href="#">P1 list</a></td>
+		<td>Description x</td>
+		<td><a href="#">Personal profile</a></td>
+		<td><a href="mailto:">x@xxx.com</a></td>
 		</tr>
 		
 		<tr class="a">
 		<td><input type="checkbox" /></td>
-		<td><a href="#">name X</a></td>
-		<td>descr X</td>
-		<td>Personal profile</td>
-		<td><a href="#">project X</a></td>
-		<td><a href="#">joes@users.com</a></td>
+		<td>n</td>
+		<td><select>
+			<option>1 daily</option>
+			<option>2 daily</option>			
+			<option>1hr</option>
+			<option>.5hr</option>
+			</select>
+		</td>
+		<td><a href="#">Special case X</a></td>
+		<td>Description x</td>
+		<td><a href="#">Project X</a></td>
+		<td><a href="mailto:">x@xxx.com</a></td>
 		</tr>
 		
 		<tr class="b">
 		<td><input type="checkbox" /></td>
-		<td><a href="#">name X</a></td>
-		<td>descr X</td>
-		<td>All users</td>
-		<td><a href="#">project X</a></td>
-		<td><a href="#">joes@users.com</a></td>
+		<td>n</td>
+		<td><select>
+			<option>1 daily</option>
+			<option>2 daily</option>			
+			<option>1hr</option>
+			<option>.5hr</option>
+			</select>
+		</td>
+		<td><a href="#">Bugs with funny names</a></td>
+		<td>Description x</td>
+		<td><a href="#">Project X</a></td>
+		<td><a href="mailto:">x@xxx.com</a></td>
 		</tr>
-		
-		
-		<tr class="a">
-		<td><input type="checkbox" /></td>
-		<td><a href="#">name X</a></td>
-		<td>descr X</td>
-		<td>Personal profile</td>
-		<td><a href="#">project X</a></td>
-		<td><a href="#">joes@users.com</a></td>
-		</tr>
-		
-		<tr class="b">
-		<td><input type="checkbox" /></td>
-		<td><a href="#">name X</a></td>
-		<td>descr X</td>
-		<td>All users</td>
-		<td><a href="#">project X</a></td>
-		<td><a href="#">joes@users.com</a></td>
-		</tr>
+
 		</table>
 
 		<p>&#171; previous | 1 of 1 | next &#187; </p>
 
-		<p class="functnbar"><input type="submit" value="delete selected" />&#160;<input type="submit" value="cancel" /></p>
+		<div class="functnbar">
+			<table cellpadding="0" cellspacing="0" border="0">
+			<tr>
+			<th>General functions</th>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+
+			<th>Select list item(s) to:</th>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+
+			</tr>
+
+			<tr>
+			<td><input type="submit" value="save" class="bttn" />&nbsp;<input type="submit" value="cancel" class="bttn" />&nbsp;<input type="submit" value="new" class="bttn" /></td>			
+
+			<td><input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" />&nbsp;<input type="submit" value="subscribe" class="bttn" />&nbsp;<input type="submit" value="unsubscribe" class="bttn" /></td>
+
+			</tr>
+			</table>
+		</div>
+
+		
 	</div>
 	<!-- Scarab - App -->
 
