updated font size

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Scarab UI</title>
 	<style type="text/css">
-		body { background: white; font-family: Verdana, Lucida, Arial, Helvetica, sans-serif; font-size: x-small; }
+		body { background: white; font-family: Verdana, Lucida, Arial, Helvetica, sans-serif; font-size: small;}
 		th { background: #ccc }
 		dd { margin-bottom: 1em } 
 		dt { font-weight: bold; font-size: small; color: white; background: #999; padding: 3px; }
@@ -21,7 +21,7 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.27 2001/09/12 23:24:15 braino Exp $ <a href=""></a></em>
+<em>$Id: index.html,v 1.28 2001/09/18 16:52:14 Matthew Exp $ <a href=""></a></em>
 
 
 <ul>
