added some comments about weekly status

--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.24 2001/09/05 08:23:22 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.25 2001/09/19 18:07:09 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,14 +20,13 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/09/05 08:23:22 $
+Last Updated: $Date: 2001/09/19 18:07:09 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
 
 <p>
-Project Start Date: 8/2<br/>
-Project Finish Date: 10/15
+Project 1.0 Alpha 1 Release Date: 10/15
 </p>
 
 <p>
@@ -57,15 +56,16 @@ up to date reflection of the current project status.
 
 <ul>
 <li>
-    9-5-01 - Everyone is still coding like mad (see the 
-    <a href="project_schedule.html">Project Schedule</a> for
-    an idea of who is working on what). The latest UI changes
-    are up on the <a href="/nonav/ui/">static website</a>. Once they are
-    finalized, the CollabNet UI team will be updating the Velocity
-    templates to reflect the new UI. This is your chance to 
-    <a href="project_members.html">comment</a> on 
-    how Scarab will look and work.
+    9-19-01 - Everyone is still coding like mad in order to reach our
+    Alpha 1 date. We would also like to welcome a new (non-CollabNet)
+    developer to the project, Tim McNerney. He is currently working on
+    improving the testing suites. There also seems to be an influx of
+    people registering for Observer roles (1-4/day!) on the Scarab
+    project as well as people looking at the Runbox. Welcome! If you are
+    inclined, please going our development mailing list and send us an
+    intro or some comments.
 </li>
+
 </ul>
 
 </body>
