--- a/www/project_members.html
+++ b/www/project_members.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_members.html,v 1.7 2001/08/24 20:47:14 jon Exp $ --> 
+<!-- $Id: project_members.html,v 1.8 2001/09/19 18:07:45 jon Exp $ --> 
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -136,6 +136,7 @@ People in the community contributing to Scarab:
 </p>
 
 <ul>
+<li>Tim McNerney</li>
 <li>Warner Onstine</li>
 <li>Bilal Bhatti</li>
 <li>Jim Powell</li>
