--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.25 2001/09/19 18:07:09 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.26 2001/09/19 18:08:31 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/09/19 18:07:09 $
+Last Updated: $Date: 2001/09/19 18:08:31 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -62,7 +62,7 @@ up to date reflection of the current project status.
     improving the testing suites. There also seems to be an influx of
     people registering for Observer roles (1-4/day!) on the Scarab
     project as well as people looking at the Runbox. Welcome! If you are
-    inclined, please going our development mailing list and send us an
+    inclined, please join our development mailing list and send us an
     intro or some comments.
 </li>
 
