added links to the UI mockups and from the UI mockups back to the main website

--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.12 2001/09/12 20:47:38 jon Exp $ -->
+<!-- $Id: project_docs.html,v 1.13 2001/09/24 22:03:23 jon Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -22,6 +22,7 @@
                 <li><a href="project_status.html">Project Status</a></li>
                 <li><a href="scarab-design.html">Design Documentation</a></li>
                 <li><a href="attributes.html">Attribute Documentation</a></li>
+                <li><a href="/nonav/ui/">UI Mockups</a></li>
 <!--                <li><a href="usemodels/index.html">Use Models: user classes, use cases, screen descriptions</a></li> -->
                 <li><a href="http://scarab.whichever.com/">Nightly Runbox</a> (may be down)</li>
                 <li><a href="scarabfeaturematrix.html">Feature Matrix</a></li>
