--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,10 +21,11 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.28 2001/09/18 16:52:14 Matthew Exp $ <a href=""></a></em>
+<em>$Id: index.html,v 1.29 2001/09/24 22:03:24 jon Exp $ <a href=""></a></em>
 
 
 <ul>
+	<li><a href="http://scarab.tigris.org/">Back to scarab.tigris.org</a></li>
 	<li><a href="#milscre">Milestone screens - resource map</a></li>
 	<li><a href="#stygui">Style Guide</a></li>
 </ul>
