--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,7 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.29 2001/09/24 22:03:24 jon Exp $ <a href=""></a></em>
+<em>$Id: index.html,v 1.30 2001/09/26 18:45:31 Matthew Exp $ <a href=""></a></em>
 
 
 <ul>
@@ -344,6 +344,23 @@
 		<tr class="a">
 		<td><a href="./milestone10x_screens/2-1-4-0.html">2.1.4.0</a></td>	
 		<td>Customize / create "enter issue"</td>	
+		<td>?</td>
+		</tr>
+		</table>
+	</dd>
+	
+	<dt>help files/app</dt>
+	<dd>
+		<table>
+		<tr>
+		<th width="100">comp</th>	
+		<th>title</th>	
+		<th>template pathname (/scarab/src/templates/screens)</th>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./help_screens/">help.html</a></td>	
+		<td>Help home</td>	
 		<td>?</td>
 		</tr>
 		</table>
