--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,7 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.31 2001/09/26 18:49:49 Matthew Exp $ <a href=""></a></em>
+<em>$Id: index.html,v 1.32 2001/09/26 18:50:35 Matthew Exp $ <a href=""></a></em>
 
 
 <ul>
@@ -359,7 +359,7 @@
 		</tr>
 		
 		<tr class="a">
-		<td><a href="./help_screens/index.html">help.html</a></td>	
+		<td><a href="./help_screens/index.html" target="_new">help.html</a></td>	
 		<td>Help home</td>	
 		<td>?</td>
 		</tr>
