--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -20,7 +20,7 @@
 		<td>
 		<div align="right" id="loginstatus">
 			<div>
-				Logged in as: <strong class="username">User XX</strong>
+				Logged in: <strong class="username">User XX</strong>
 			</div>
 			<div>
 				<a href="#">Edit Profile</a> | <a href="#">Logout</a>
@@ -39,16 +39,16 @@
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
-	<div id="navcol">
+	<div id="navcolumn">
 		<table border="0" cellspacing="0" cellpadding="0" width="100%">
 			<tr>
 			<th>
-			<a href="#">Start page</a>
+			<a href="#">My start page</a>
 			</th>
 			</tr>
 			<tr>
 			<th>
-			<a href="#">Projects</a>/<a href="#">Categories</a>
+			<a href="#">Projects &amp; categories</a>
 			</th>
 			</tr>
 			<tr>
@@ -79,7 +79,7 @@
 			</tr>
 			<tr>
 			<th>
-			&nbsp;<a href="#">Admin Functions</a>
+			&nbsp;<a href="#">Admin functions</a>
 			</th>
 			</tr>
 		</table>
@@ -95,7 +95,7 @@
 		<tr>
 		<td>
 			<div> 
-				<a href="#">[Go to help index]</a>
+				<a href="../help_screens/index.html" target="_new">[Go to help index]</a>
 			</div>
 			<div> 
 				<a href="#">Use this page</a>...
@@ -316,7 +316,7 @@
 	<div id="footer">
 		<p>
 		<a href="#">Domain Home</a> |
-		<a href="#">Help</a> | 
+		<a href="../help_screens/index.html" target="_new">Help</a> | 
 		<a href="#">Site FAQ</a> |
 		<a href="#">Feedback</a>
 		</p>
