--- a/www/ui/milestone2x_screens/2-2-1.html
+++ b/www/ui/milestone2x_screens/2-2-1.html
@@ -39,16 +39,16 @@
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
-	<div id="navcol">
+	<div id="navcolumn">
 		<table border="0" cellspacing="0" cellpadding="0" width="100%">
 			<tr>
 			<th>
-			<a href="#">Start page</a>
+			<a href="#">My start page</a>
 			</th>
 			</tr>			
 			<tr>
 			<th>
-			<a href="#">Projects</a>/<a href="#">Categories</a>
+			<a href="#">Projects &amp; categories</a>
 			</th>
 			</tr>			
 			<tr>
@@ -79,7 +79,7 @@
 			</tr>			
 			<tr>
 			<th>
-			&nbsp;<a href="#">Admin Functions</a>
+			&nbsp;<a href="#">Admin functions</a>
 			</th>
 			</tr>
 		</table>
@@ -190,7 +190,7 @@
 			
 			<tr>
 			<th width="120">issue creation date range:</th>
-         <td><dl><dt>from:</dt>
+         <td><dl><div>from:</div>
 
 <dd><select>
 <option>Jan</option>
@@ -270,7 +270,7 @@
 <option>24:00</option></select></dd>
 
         
-<dt>to:</dt>
+<div>to:</div>
 <dd><select>
 <option>Jan</option>
 <option>Feb</option>
@@ -543,7 +543,7 @@
         <tr>
          <th width="120">date range:</th>
 
-         <td><dl><dt>from:</dt>
+         <td><dl><div>from:</div>
 
 <dd><select>
 <option>Jan</option>
@@ -623,7 +623,7 @@
 <option>24:00</option></select></dd>
 
         
-<dt>to:</dt>
+<div>to:</div>
 <dd><select>
 <option>Jan</option>
 <option>Feb</option>
