--- a/www/ui/milestone6x_screens/2-4-1_4.html
+++ b/www/ui/milestone6x_screens/2-4-1_4.html
@@ -39,16 +39,16 @@
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
-	<div id="navcol">
+	<div id="navcolumn">
 		<table border="0" cellspacing="0" cellpadding="0" width="100%">
 			<tr>
 			<th>
-			<a href="#">Start page</a>
+			<a href="#">My start page</a>
 			</th>
 			</tr>
 			<tr>
 			<th>
-			<a href="#">Projects</a>/<a href="#">Categories</a>
+			<a href="#">Projects &amp; categories</a>
 			</th>
 			</tr>
 			<tr>
@@ -79,7 +79,7 @@
 			</tr>
 			<tr>
 			<th>
-			&nbsp;<a href="#">Admin Functions</a>
+			&nbsp;<a href="#">Admin functions</a>
 			</th>
 			</tr>
 		</table>
