moved the module attribute editor from m10 to m1 and commented out the m1 2.1.4.0. request to neal to modify the project schedule to match this has already been made.
fixed one a/b sequence
-jon

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,7 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.33 2001/09/27 20:02:10 Matthew Exp $ <a href=""></a></em>
+<em>$Id: index.html,v 1.34 2001/09/28 17:43:51 jon Exp $ <a href=""></a></em>
 
 
 <ul>
@@ -58,12 +58,20 @@
 		<td>Enter Issue Verbose</td>
 		<td>entry/Wizard3.vm</td>
 		</tr>
+
+		<tr class="b">
+		<td><a href="./milestone10x_screens/2-1-4-0.html">2.1.4.0</a></td>	
+		<td>Customize / create "enter issue" (Module Attribute Editor)</td>	
+		<td>?</td>
+		</tr>
 		
+<!--
 		<tr class="b">
 		<td><a href="./milestone1x_screens/2-1-4-0.html">2.1.4.0</a></td>
 		<td>Customize / Create "Enter Issue"</td>
 		<td>? - suggest 'CusCreEntIss.vm'</td>
 		</tr>
+-->
 		
 		<tr class="a">
 		<td><a href="./milestone1x_screens/2-6-1.html">2.6.1</a></td>
@@ -136,13 +144,13 @@
 		<td>? - suggest 'SavQue.vm'</td>
 		</tr>
 		
-		<tr class="a">
+		<tr class="b">
 		<td><a href="./milestone2x_screens/2-2-2.html">2.2.2</a></td>	
 		<td>Saved query list</td>	
 		<td>? - suggest 'SavQue.vm'</td>
 		</tr>
 		
-		<tr class="b">
+		<tr class="a">
 		<td><a href="./milestone2x_screens/2-6-0.html">2.6.0</a></td>	
 		<td>Queue list / search results</td>	
 		<td>? - suggest 'QueLisSeaRes.vm'</td>
@@ -341,11 +349,6 @@
 		<td>?</td>
 		</tr>
 		
-		<tr class="a">
-		<td><a href="./milestone10x_screens/2-1-4-0.html">2.1.4.0</a></td>	
-		<td>Customize / create "enter issue"</td>	
-		<td>?</td>
-		</tr>
 		</table>
 	</dd>
 	<!--
