fixing milestone 10 link

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,7 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.34 2001/09/28 17:43:51 jon Exp $ <a href=""></a></em>
+<em>$Id: index.html,v 1.35 2001/09/28 18:03:26 Matthew Exp $ <a href=""></a></em>
 
 
 <ul>
@@ -346,6 +346,12 @@
 		<tr class="b">
 		<td><a href="./milestone10x_screens/2-1-0-2.html">2.1.0.2</a></td>	
 		<td>Template list</td>	
+		<td>?</td>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone10x_screens/2-1-4-0.html">2.1.4.0</a></td>	
+		<td>?</td>	
 		<td>?</td>
 		</tr>
 		
