tabs and radio buttons...

--- a/www/ui/milestone1x_screens/3-0-0.html
+++ b/www/ui/milestone1x_screens/3-0-0.html
@@ -143,6 +143,16 @@
 	<div class="app" id="div3-0-0">
 		<h2>Global attributes (3.0.0)</h2>
 
+		
+		<div id="tabs">
+			<table cellpadding="3" cellspacing="0" border="0">
+			<tr>
+			<th>global attributes</th>
+			<td><a href="#" title="Customize 'enter issue'">Customize "enter issue"</a></td>
+			</tr>
+			</table>
+		</div><br>
+
 
 		
 		<div class="functnbar">
@@ -176,7 +186,7 @@
 		</tr>
 		
 		<tr class="a">
-		<td><input type="checkbox" /></td>
+		<td><input type="radio" name="select" /></td>
 		<td>type x</td>
 		<td><a href="#">name x</a></td>
 		<td>descr. X</td>
@@ -186,7 +196,7 @@
 		</tr>
 		
 		<tr class="b">
-		<td><input type="checkbox" /></td>
+		<td><input type="radio" name="select" /></td>
 		<td>type x</td>
 		<td><a href="#">name x</a></td>
 		<td>descr. X</td>
@@ -196,7 +206,7 @@
 		</tr>
 		
 		<tr class="a">
-		<td><input type="checkbox" /></td>
+		<td><input type="radio" name="select" /></td>
 		<td>type x</td>
 		<td><a href="#">name x</a></td>
 		<td>descr. X</td>
@@ -206,7 +216,7 @@
 		</tr>
 		
 		<tr class="b">
-		<td><input type="checkbox" /></td>
+		<td><input type="radio" name="select" /></td>
 		<td>type x</td>
 		<td><a href="#">name x</a></td>
 		<td>descr. X</td>
@@ -256,5 +266,6 @@
 </form>
 </body>
 </html>
+
 
 
