little update to 2.1.4.1
and I added microprinting to functbar2 if you have a scanning-tunneling electron microscope you can read the message "sw-corner design suggested by J.Stevens")

--- a/www/ui/milestone1x_screens/2-1-4-1.html
+++ b/www/ui/milestone1x_screens/2-1-4-1.html
@@ -182,7 +182,9 @@
         <th nowrap="nowrap">select</th>
         <th>attribute name:</th>
         <th>per project name:</th>
-        <th>active/inactive:</th>
+        <th>(in)active:</th>
+        <th>required:</th>
+        <th>quick search:</th>
         <th>sequence #:</th>
         </tr>
 
@@ -191,6 +193,8 @@
         <td><input type="checkbox" /></td>
         <td><a href="#">Attribute W</a></td>
         <td><input type="text" name="" value="" /></td>
+        <td><input type="checkbox" checked="checked" /></td>
+        <td><input type="checkbox" checked="checked" /></td>
         <td><input type="checkbox" checked="checked" /></td>
         <td>
         <select class="select">
@@ -204,6 +208,8 @@
         <td><a href="#">Attribute X</a></td>
         <td><input type="text" name="" value="" /></td>
         <td><input type="checkbox" checked="checked" /></td>
+        <td><input type="checkbox" checked="checked" /></td>
+        <td><input type="checkbox" checked="checked" /></td>
         <td>
         <select class="select">
         <option>2</option>
@@ -215,6 +221,8 @@
         <td><input type="checkbox" /></td>
         <td><a href="#">Attribute Y</a></td>
         <td><input type="text" name="" value="" /></td>
+        <td><input type="checkbox" checked="checked" /></td>
+        <td><input type="checkbox" /></td>
         <td><input type="checkbox" checked="checked" /></td>
         <td>
         <select class="select">
@@ -228,6 +236,8 @@
         <td><a href="#">Attribute Z</a></td>
         <td><input type="text" name="" value="" /></td>
         <td><input type="checkbox" checked="checked" /></td>
+        <td><input type="checkbox" /></td>
+        <td><input type="checkbox" /></td>
         <td>
         <select class="select">
         <option>4</option>
