--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,7 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.40 2001/10/04 23:26:18 braino Exp $ <a href=""></a></em>
+<em>$Id: index.html,v 1.41 2001/10/05 06:43:48 braino Exp $ <a href=""></a></em>
 
 
 <ul>
@@ -157,7 +157,7 @@
 		
 		<tr class="a">
 		<td><a href="./milestone2x_screens/2-6-0.html">2.6.0</a></td>	
-		<td>Queue list / search results</td>	
+		<td>Search results/List</td>	
 		<td>? - suggest 'QueLisSeaRes.vm'</td>
 		</tr>
 		</table>
