--- a/www/ui/milestone1x_screens/2-1-4-0.html
+++ b/www/ui/milestone1x_screens/2-1-4-0.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Manage artifact types (2.1.4)</title>
+    <title>Customize/create artifact type (2.1.4.0)</title>
     <link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
     <link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -131,7 +131,7 @@
  
         
     <div class="app" id="div2-1-4-0">
-        <h2>Manage artifact types (2.1.4)</h2>
+        <h2>Customize/create artifact type (2.1.4.0)</h2>
 
   
 
