text tweaks... apologies.

--- a/www/ui/milestone1x_screens/2-1-4.html
+++ b/www/ui/milestone1x_screens/2-1-4.html
@@ -292,7 +292,7 @@
             <tr>
             <td><strong>Screen options:</strong></td>
             <td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-            <td><strong>attribute group options:</strong></td>
+            <td><strong>Artifact management options:</strong></td>
             <td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
             </tr>
 
