nomenclature tweak to 2.1.4

--- a/www/ui/milestone1x_screens/2-1-4.html
+++ b/www/ui/milestone1x_screens/2-1-4.html
@@ -141,7 +141,7 @@
             <tr>
             <td><strong>Screen options:</strong></td>
             <td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-            <td><strong>Artifact management options:</strong></td>
+            <td><strong>Artifact type management options:</strong></td>
             <td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
             </tr>
 
@@ -159,7 +159,7 @@
         <table width="100%" border="1" cellspacing="2" cellpadding="3">
         <tr>
         <th nowrap="nowrap">select</th>
-        <th>Artifact name:</th>
+        <th>Artifact type name:</th>
         <th>(in)active:</th>
         <th>sequence #:</th>
         <th>parent:</th>        
